--- a/tp4/OnlineShop/package.json
+++ b/tp4/OnlineShop/package.json
@@ -8,6 +8,7 @@
     "e2e": "nightwatch --config ./tests/nightwatch.json"
   },
   "dependencies": {
+    "@types/express-session": "^1.17.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
