--- a/tp5/CodeInitial/package.json
+++ b/tp5/CodeInitial/package.json
@@ -6,7 +6,8 @@
     "postinstall": "cd ./client && npm install && cd .. && cd ./server && npm install",
     "start": "concurrently \"cd ./client && npm start\" \"cd ./server && npm start\"",
     "e2e": "nightwatch --config ./tests/nightwatch.json",
-    "clean": "cd ./client && rm -rf node_modules && cd .. && cd ./server && rm -rf node_modules && cd .. && rm -rf node_modules"
+    "clean": "cd ./client && rm -rf node_modules && cd .. && cd ./server && rm -rf node_modules && cd .. && rm -rf node_modules",
+    
   },
   "devDependencies": {
     "assert": "^1.4.1",
